--- a/examples/templates/header.html
+++ b/examples/templates/header.html
@@ -1,3 +1,10 @@
 <head>
-    <title>{{header.title}}</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="Example Site" />
+    <meta name="author" content="Rolf Scherer" />
+    <title>Example</title>
+    <link href="css/styles.css" rel="stylesheet" />
+    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
 </head>
